# swift-eats

./: API-SPECIFICATION.md  ARCHITECTURE.md  CHAT_HISTORY.md  COVERAGE.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  generate_coverage.py  generate_coverage_report.sh
logistics-service/: .coverage  DESIGN.md  README.md  coverage.json  docker-compose.yml  pyproject.toml  requirements.txt
logistics-service/app/: __init__.py  main.py
logistics-service/app/core/: config.py  database.py  redis_streams.py
logistics-service/tests/: __init__.py  test_api_locations.py  test_location_service.py
menu-service/: .coverage  .gitignore  DESIGN.md  README.md  coverage.json  docker-compose.yml  pytest.ini  requirements-test.txt  requirements.txt
menu-service/app/: __init__.py  main.py
menu-service/tests/: __init__.py  conftest.py  test_api_restaurants.py  test_restaurant_service.py
order-service/: .coverage  README.md  coverage.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
order-service/app/: __init__.py  main.py
order-service/app/api/routes/: orders.py
order-service/app/core/: circuit_breaker.py  config.py  database.py
order-service/app/models/: order.py
order-service/app/schemas/: order.py
order-service/app/services/: order_service.py  payment_service.py
order-service/app/workers/: payment_worker.py
order-service/tests/: README.md  conftest.py  test_api_orders.py  test_circuit_breaker.py  test_models.py  test_order_service.py  test_payment_service.py  test_payment_worker.py
(+12 files in other folders)
