[project]
name = "order-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.1.4",
    "coverage>=7.13.1",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "httpcore>=1.0.9",
    "iniconfig>=2.3.0",
    "pluggy>=1.6.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.45",
]
